--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
             <div class="title-swipe t-swipe1"></div>
           </div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
-            asperiores ad laboriosam iure rem. Voluptates pariatur quo iusto non
-            deleniti.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aut dolorum ut molestiae dicta voluptate eligendi nihil nemo maiores hic!psum dolor sit amet, consectetur adipisicing elit. Est dolor nesciunt commodi voluptatum sequi tempore. Voluptates quas esse consectetur cupiditate.
           </p>
           <a href="./fashion/index.html" class="explore fashion-exp">Explore</a>
           <div class="reveal-text"></div>
