Updated some patches

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Music || Heart</title>
+    <title>Anime || Heart</title>
     <link
       href="https://fonts.googleapis.com/css?family=Abril+Fatface|Montserrat&display=swap"
       rel="stylesheet"
@@ -12,7 +12,7 @@
   </head>
   <body data-barba="wrapper">
     <header class="nav-header">
-      <h1><a href="./index.html" id="logo">grishma.</a></h1>
+      <h1><a href="./index.html" id="logo">anime.</a></h1>
       <div class="burger">
         <div class="line1"></div>
         <div class="line2"></div>
@@ -21,13 +21,13 @@
     <main data-barba="container" data-barba-namespace="home">
       <section class="mountain slide">
         <div class="hero-img">
-          <img src="./img/forest.png" alt="forest image" />
+          <img src="./img/forest.jpg" alt="anime image" />
           <div class="reveal-img"></div>
         </div>
         <div class="hero-desc">
           <div class="title">
             <h2>
-              Music at your <span class="mountain-span">heart.</span>
+              Anime at your <span class="mountain-span">heart.</span>
             </h2>
             <div class="title-swipe t-swipe1"></div>
           </div>
@@ -40,12 +40,12 @@
       </section>
       <section class="hike slide">
         <div class="hero-img">
-          <img src="./img/hike.png" alt="hike image" />
+          <img src="./img/hike.jpg" alt="hike image" />
           <div class="reveal-img"></div>
         </div>
         <div class="hero-desc">
           <div class="title">
-            <h2>Music at your <span class="hike-span">heart.</span></h2>
+            <h2>Anime at your <span class="hike-span">heart.</span></h2>
             <div class="title-swipe t-swipe2"></div>
           </div>
           <p>
@@ -59,13 +59,13 @@
       </section>
       <section class="fashion slide">
         <div class="hero-img">
-          <img src="./img/fashion.png" alt="fashion image" />
+          <img src="./img/fashion.jpg" alt="fashion image" />
           <div class="reveal-img"></div>
         </div>
         <div class="hero-desc">
           <div class="title">
             <h2>
-              Music at your <span class="fashion-span">heart.</span>
+              Anime at your <span class="fashion-span">heart.</span>
             </h2>
             <div class="title-swipe t-swipe3"></div>
           </div>
