--- a/fashion/index.html
+++ b/fashion/index.html
@@ -21,7 +21,7 @@
     <main data-barba="container" data-barba-namespace="fashion">
       <section class="fashion1 detail-slide">
         <div class="fashion-text">
-          <h1>Grishma Chapagain</h1>
+          <h1>Monkey D. Luffy</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
             velit voluptates placeat id neque aperiam mollitia consequuntur
@@ -35,7 +35,7 @@
       </section>
       <section class="fashion2 detail-slide">
         <div class="fashion-text">
-          <h1>Grishma Chapagain</h1>
+          <h1>Ronoroa Zoro</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
             velit voluptates placeat id neque aperiam mollitia consequuntur
@@ -49,7 +49,7 @@
       </section>
       <section class="fashion3 detail-slide">
         <div class="fashion-text">
-          <h1>Grishma Chapagain</h1>
+          <h1>Vinsmoke Sanji</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate
             velit voluptates placeat id neque aperiam mollitia consequuntur
